--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6 mb-4">
                     <div class="card h-100">
-                        <img src="p1.jpg" class="card-img-top" alt="Team Member 1" height="200">
+                        <img src="P1.jpg" class="card-img-top" alt="Team Member 1" height="200">
                         <div class="card-body text-center">
                             <h5 class="card-title">John Doe</h5>
                             <p class="card-text">Career Counselor</p>
