--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6 mb-4">
                     <div class="card shadow">
-                        <img src="p1.jpg" class="card-img-top" alt="John Doe" style="width: 305px; height: 200px;">
+                        <img src="P1.jpg" class="card-img-top" alt="John Doe" style="width: 305px; height: 200px;">
                         <div class="card-body text-center">
                             <h5 class="card-title">John Doe</h5>
                             <p class="card-text">Career Counselor</p>
