--- a/e1.html
+++ b/e1.html
@@ -192,7 +192,7 @@ a {
                   <div class="col-md-3 mb-4">
                       <a href="cybersecurity.html">
                           <div class="card h-100">
-                              <img src="cybersecurity.jpeg" class="card-img-top" alt="Cybersecurity Engineering">
+                              <img src="CyberSecurity.jpeg" class="card-img-top" alt="Cybersecurity Engineering">
                               <div class="card-body">
                                   <h5 class="card-title">Cybersecurity</h5>
                                   <p class="card-text">Protect systems from cyber threats and vulnerabilities.</p>
